--- a/DUNE_SALES_ANALYSIS.ipynb
+++ b/DUNE_SALES_ANALYSIS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpTwUSCzkXCRCXgkZlNofr",
+      "authorship_tag": "ABX9TyMYY1oiSDeiiV3iBV3u8cCK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -592,34 +592,282 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Examining the data features\n",
+        "df.columns"
+      ],
       "metadata": {
-        "id": "Wz1NKZrkIn4L"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wz1NKZrkIn4L",
+        "outputId": "2d144233-a128-42ad-eb1b-c8ec0f9b92da"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['Date', 'Customer', 'Sales Person', 'Customer_Age', 'Customer_Gender',\n",
+              "       'State', 'Product_Category', 'Sub_Category', 'Payment Option',\n",
+              "       'Quantity', 'Unit_Cost', 'Unit_Price'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Investigating the data\n",
+        "df.info()"
+      ],
       "metadata": {
-        "id": "g4ZE67JyIn65"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g4ZE67JyIn65",
+        "outputId": "4df28315-4031-4214-ab63-de873f853c03"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 34867 entries, 0 to 34866\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   Date              34866 non-null  object \n",
+            " 1   Customer          34866 non-null  object \n",
+            " 2   Sales Person      34866 non-null  object \n",
+            " 3   Customer_Age      34867 non-null  int64  \n",
+            " 4   Customer_Gender   34866 non-null  object \n",
+            " 5   State             34866 non-null  object \n",
+            " 6   Product_Category  34866 non-null  object \n",
+            " 7   Sub_Category      34866 non-null  object \n",
+            " 8   Payment Option    34866 non-null  object \n",
+            " 9   Quantity          34866 non-null  float64\n",
+            " 10  Unit_Cost         34866 non-null  float64\n",
+            " 11  Unit_Price        34866 non-null  float64\n",
+            "dtypes: float64(3), int64(1), object(8)\n",
+            "memory usage: 3.2+ MB\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Numerical Statistical Analysis\n",
+        "df.describe()"
+      ],
       "metadata": {
-        "id": "008iHVemIn9y"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        },
+        "id": "008iHVemIn9y",
+        "outputId": "20baee70-1321-4ea6-dea5-5f1fca78a16f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       Customer_Age      Quantity     Unit_Cost    Unit_Price\n",
+              "count  34867.000000  34866.000000  34866.000000  34866.000000\n",
+              "mean      36.382683      2.002524    349.880567    389.232473\n",
+              "std       11.112813      0.813936    490.015846    525.319097\n",
+              "min       17.000000      1.000000      0.670000      0.670000\n",
+              "25%       28.000000      1.000000     45.000000     53.670000\n",
+              "50%       35.000000      2.000000    150.000000    179.000000\n",
+              "75%       44.000000      3.000000    455.000000    521.000000\n",
+              "max       87.000000      3.000000   3240.000000   5082.000000"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-56c5793f-13f3-43e5-9365-082a2af6ee94\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Customer_Age</th>\n",
+              "      <th>Quantity</th>\n",
+              "      <th>Unit_Cost</th>\n",
+              "      <th>Unit_Price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>34867.000000</td>\n",
+              "      <td>34866.000000</td>\n",
+              "      <td>34866.000000</td>\n",
+              "      <td>34866.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>36.382683</td>\n",
+              "      <td>2.002524</td>\n",
+              "      <td>349.880567</td>\n",
+              "      <td>389.232473</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>11.112813</td>\n",
+              "      <td>0.813936</td>\n",
+              "      <td>490.015846</td>\n",
+              "      <td>525.319097</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>17.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.670000</td>\n",
+              "      <td>0.670000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>28.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>45.000000</td>\n",
+              "      <td>53.670000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>35.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>150.000000</td>\n",
+              "      <td>179.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>44.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>455.000000</td>\n",
+              "      <td>521.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>87.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>3240.000000</td>\n",
+              "      <td>5082.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56c5793f-13f3-43e5-9365-082a2af6ee94')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-56c5793f-13f3-43e5-9365-082a2af6ee94 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-56c5793f-13f3-43e5-9365-082a2af6ee94');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n"
+      ],
       "metadata": {
         "id": "vr78-lDBIoAZ"
       },
